--- a/week7/Notebooks/numpy_tasks.ipynb
+++ b/week7/Notebooks/numpy_tasks.ipynb
@@ -1,12 +1,80 @@
 {
  "cells": [
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-30T13:03:19.856134Z",
+     "start_time": "2026-01-30T13:03:19.543168Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "301736de324a151c"
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# 1D array with numbers from 1 to 10\n",
+    "array_1d = np.arange(1, 11)\n",
+    "\n",
+    "# 2D array (3x3) with random integers (between 1 and 100)\n",
+    "array_2d = np.random.randint(1, 101, size=(3, 3))\n",
+    "\n",
+    "print(\"1D Array:\", array_1d)\n",
+    "print(\"2D Array:\\n\", array_2d)"
+   ],
+   "id": "301736de324a151c",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1D Array: [ 1  2  3  4  5  6  7  8  9 10]\n",
+      "2D Array:\n",
+      " [[49 21  2]\n",
+      " [82  1 51]\n",
+      " [42 18 31]]\n"
+     ]
+    }
+   ],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-30T13:03:19.918800Z",
+     "start_time": "2026-01-30T13:03:19.870021Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Calculations\n",
+    "total_sum = np.sum(array_1d)\n",
+    "mean_val = np.mean(array_1d)\n",
+    "max_val = np.max(array_1d)\n",
+    "\n",
+    "# Vectorized multiplication (multiplies every element)\n",
+    "multiplied_array = array_1d * 2\n",
+    "\n",
+    "# Conditional replacement (Boolean Indexing)\n",
+    "# We create a copy so we don't overwrite the original array_1d\n",
+    "task_array = array_1d.copy()\n",
+    "task_array[task_array > 5] = 0\n",
+    "\n",
+    "print(f\"Sum: {total_sum}, Mean: {mean_val}, Max: {max_val}\")\n",
+    "print(\"Multiplied by 2:\", multiplied_array)\n",
+    "print(\"Values > 5 replaced with 0:\", task_array)"
+   ],
+   "id": "d2d90228dfc0cfec",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum: 55, Mean: 5.5, Max: 10\n",
+      "Multiplied by 2: [ 2  4  6  8 10 12 14 16 18 20]\n",
+      "Values > 5 replaced with 0: [1 2 3 4 5 0 0 0 0 0]\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   }
  ],
  "metadata": {
