--- a/week7/Notebooks/pandas_tasks.ipynb
+++ b/week7/Notebooks/pandas_tasks.ipynb
@@ -2,15 +2,122 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2026-01-30T13:05:28.804297Z",
+     "start_time": "2026-01-30T13:05:28.613303Z"
+    }
    },
-   "outputs": [],
    "source": [
-    ""
-   ]
+    "import pandas as pd\n",
+    "\n",
+    "# Creating the sample data\n",
+    "data = {\n",
+    "    'Name': ['Alice', 'Bob', 'Charlie', 'David', 'Eve'],\n",
+    "    'Age': [19, 22, 20, 23, 21],\n",
+    "    'Score': [85, 78, 92, 88, 76]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)"
+   ],
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-30T13:05:28.835652Z",
+     "start_time": "2026-01-30T13:05:28.805151Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Display the first 3 rows\n",
+    "print(\"First 3 rows:\")\n",
+    "print(df.head(3))\n",
+    "\n",
+    "# Show summary statistics\n",
+    "print(\"\\nSummary Statistics:\")\n",
+    "print(df.describe())\n",
+    "\n",
+    "# Find the average score\n",
+    "average_score = df['Score'].mean()\n",
+    "print(f\"\\nAverage Score: {average_score}\")"
+   ],
+   "id": "7c86bb75b64632a7",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First 3 rows:\n",
+      "      Name  Age  Score\n",
+      "0    Alice   19     85\n",
+      "1      Bob   22     78\n",
+      "2  Charlie   20     92\n",
+      "\n",
+      "Summary Statistics:\n",
+      "             Age      Score\n",
+      "count   5.000000   5.000000\n",
+      "mean   21.000000  83.800000\n",
+      "std     1.581139   6.723095\n",
+      "min    19.000000  76.000000\n",
+      "25%    20.000000  78.000000\n",
+      "50%    21.000000  85.000000\n",
+      "75%    22.000000  88.000000\n",
+      "max    23.000000  92.000000\n",
+      "\n",
+      "Average Score: 83.8\n"
+     ]
+    }
+   ],
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-30T13:05:28.860752Z",
+     "start_time": "2026-01-30T13:05:28.836752Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Select students older than 20\n",
+    "older_than_20 = df[df['Age'] > 20]\n",
+    "\n",
+    "# Select students with a score above 80\n",
+    "high_scorers = df[df['Score'] > 80]\n",
+    "\n",
+    "print(\"\\nStudents older than 20:\")\n",
+    "print(older_than_20)\n",
+    "\n",
+    "print(\"\\nStudents with a score > 80:\")\n",
+    "print(high_scorers)"
+   ],
+   "id": "eef377767d177d44",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Students older than 20:\n",
+      "    Name  Age  Score\n",
+      "1    Bob   22     78\n",
+      "3  David   23     88\n",
+      "4    Eve   21     76\n",
+      "\n",
+      "Students with a score > 80:\n",
+      "      Name  Age  Score\n",
+      "0    Alice   19     85\n",
+      "2  Charlie   20     92\n",
+      "3    David   23     88\n"
+     ]
+    }
+   ],
+   "execution_count": 3
   }
  ],
  "metadata": {
